fixed overflowing results in table

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,3 +38,8 @@ body {
   top: 0;
   left: 0;
 }
+
+.results td {
+  max-width: 10ch;
+  word-wrap: break-word;
+}
